# openpose_3D_localization

./: README.md  README2.md
check_keypoints_placement/: CMakeLists.txt  package.xml
check_keypoints_placement/launch/: check_keypoints_placement.launch
check_keypoints_placement/src/: check_keypoints_placement.cpp
extras/scripts/: rosbag_openpose_addition.py
frame_transpose/: CMakeLists.txt  README.md  package.xml
frame_transpose/config/: frame_transpose.yaml
frame_transpose/include/: frame_transpose.h
frame_transpose/launch/: frame_transpose.launch
frame_transpose/scripts/: check_timestamps.py
frame_transpose/src/: frame_transpose.cpp
keypoint_3d_matching/: CMakeLists.txt  README.md  package.xml
keypoint_3d_matching/config/: keypoint_3d_matching.yaml  openpose_ros_receiver_zed.yaml
keypoint_3d_matching/include/: keypoint_3d_matching.hpp
keypoint_3d_matching/launch/: keypoint_3d_matching.launch
keypoint_3d_matching/scripts/: extract_trajectories.py
keypoint_3d_matching/src/: functions.cpp  keypoint_3d_matching.cpp
keypoint_3d_matching_msgs/: CMakeLists.txt  README.md  package.xml
keypoint_3d_matching_msgs/msg/: Keypoint3d.msg  Keypoint3d_list.msg
openpose_3D_pose_estimator/: CMakeLists.txt  README.md  package.xml
openpose_3D_pose_estimator/config/: openpose_3D_pose_estimator.yaml
openpose_3D_pose_estimator/include/: openpose_3D_pose_estimator.hpp
openpose_3D_pose_estimator/launch/: openpose_3D_pose_estimator.launch  openpose_ros_receiver_zed.launch
openpose_3D_pose_estimator/scripts/: count.py
openpose_3D_pose_estimator/src/: functions.cpp  openpose_3D_pose_estimation.cpp
openpose_3D_pose_estimator_msgs/: CMakeLists.txt  README.md  package.xml
openpose_3D_pose_estimator_msgs/msg/: Openpose_3D_v.msg
openpose_ros/: CMakeLists.txt  README.md  package.xml
openpose_ros/config/: config.yaml  openpose_ros.yaml
openpose_ros/include/: gflags_options.hpp  openpose.hpp  openpose_ros_io.hpp
openpose_ros/launch/: openpose_ros.launch
openpose_ros/src/: gflags_options.cpp  openpose.cpp  openpose_ros_io.cpp  openpose_ros_node.cpp
openpose_ros_avoid/: CMakeLists.txt  README.md  package.xml
openpose_ros_avoid/config/: openpose_ros_avoid.yaml  openpose_ros_avoid_xtion_orbbec.yaml  openpose_ros_avoid_zed.yaml
openpose_ros_avoid/include/: body_25_pose_output_format.hpp  openpose_ros_avoid.hpp
openpose_ros_avoid/launch/: openpose_ros_avoid.launch  openpose_ros_avoid_xtion_orbbec.launch  openpose_ros_avoid_zed.launch
openpose_ros_avoid/src/: openpose_ros_avoid.cpp  openpose_ros_avoid_node.cpp  utilities.cpp
openpose_ros_control/: CMakeLists.txt  README.md  package.xml
openpose_ros_control/config/: config.yaml  openpose_ros_control.yaml
openpose_ros_control/include/: body_25_pose_output_format.hpp  openpose_ros_control.hpp
openpose_ros_control/launch/: openpose_ros_control.launch
openpose_ros_control/src/: functions.cpp  openpose_ros_control.cpp  openpose_ros_control_node.cpp  utilities.cpp
openpose_ros_msgs/: README.md  package.xml
openpose_ros_receiver/: CMakeLists.txt  README.md  package.xml
openpose_ros_receiver/config/: config.yaml  openpose_3D_producer.yaml  openpose_ros_receiver.yaml  openpose_ros_receiver_xtion_orbbec.yaml
openpose_ros_receiver/include/: openpose_3D_producer.hpp  openpose_ros_receiver.hpp
openpose_ros_receiver/launch/: openpose_3D_producer.launch  openpose_ros_receiver.launch  openpose_ros_receiver_broadcaster.launch  openpose_ros_receiver_xtion_orbbec.launch
openpose_ros_receiver/scripts/: count.py  evaluate_pose_estimation.py  extract_trajectories.py  process_output.py
openpose_ros_receiver/src/: functions.cpp  help_functions.cpp  openpose_3D_producer.cpp  openpose_ros_receiver_broadcaster_node.cpp  openpose_ros_receiver_listener_node.cpp  openpose_ros_receiver_node.cpp
openpose_ros_receiver_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
openpose_ros_receiver_msgs/msg/: Keypoints.msg  Keypoints_v.msg  OpenPoseReceiverHuman.msg
openpose_ros_respond/: CMakeLists.txt  README.md  package.xml
openpose_ros_respond/config/: openpose_ros_respond.yaml
openpose_ros_respond/include/: body_25_pose_output_format.hpp  openpose_ros_respond.hpp
openpose_ros_respond/launch/: openpose_ros_respond.launch
openpose_ros_respond/src/: openpose_ros_respond.cpp  openpose_ros_respond_node.cpp  utilities.cpp
openpose_utils_launch/: CMakeLists.txt
openpose_utils_launch/launch/: openpose_launch.launch  openpose_manos.launch  openpose_ros_orbbec.launch  openpose_ros_xtion.launch  openpose_ros_zed.launch  openpose_sole.launch  whole_pipeline_orbbec.launch  whole_pipeline_orbbec_with_marker.launch  whole_pipeline_xtion.launch  whole_pipeline_xtion_with_marker.launch  whole_pipeline_zed.launch  whole_pipeline_zed_with_marker.launch
pipeline_launch/: CMakeLists.txt  README.md  package.xml
pipeline_launch/launch/: marker_setup.launch  pipeline_launch.launch
