<?xml version="1.0"?>
<package>
  <name>keypoint_3d_matching_msgs</name>
  <version>0.0.0</version>
  <description>The keypoint_3d_matching_msgs package</description>

  <maintainer email="yorgosk@email.com">yorgosk</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/yorgosk/openpose_ros</url>

  <author email="yorgosk@email.com">yorgosk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
