<?xml version="1.0"?>
<package>
  <name>openpose_ros</name>
  <version>1.2.1</version>
  <description>The openpose_ros package</description>

  <maintainer email="yorgosk@email.com">yorgosk</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/yorgosk/openpose_ros</url>

  <author email="kevinleezhang@gmail.com">Kevin Zhang</author>
  <author email="yorgosk@email.com">yorgosk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>openpose_ros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>openpose_ros_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>
