<?xml version="1.0"?>
<package>
  <name>openpose_ros_avoid</name>
  <version>0.0.0</version>
  <description>The openpose_ros_avoid package</description>

  <maintainer email="yorgosk@todo.todo">yorgosk</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/yorgosk/openpose_ros</url>

  <author email="yorgosk@email.com">yorgosk</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>openpose_ros_receiver_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>openpose_ros_receiver_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
