<?xml version="1.0"?>
<package>
  <name>openpose_ros_receiver</name>
  <version>1.0.0</version>
  <description>The openpose_ros_receiver package</description>

  <maintainer email="yorgosk@email.com">yorgosk</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/yorgosk/openpose_ros</url>

  <author email="yorgosk@email.com">yorgosk</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>openpose_ros_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>openpose_ros_msgs</run_depend>
  <run_depend>tf</run_depend>
  
</package>
